# Smart-Placement-Preparation-Assistant-using-Agentic-AI-and-RAG

./: README.md  agents.py  app.py  aws_dynamodb.py  aws_s3.py  graph.py  pyproject.toml  rag_pipeline.py  requirements.txt
