[project]
name = "skill-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.17",
    "chromadb==1.0.10",
    "huggingface-hub==0.32.0",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-groq==0.3.2",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.7",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "pypdf==5.5.0",
    "python-dotenv==1.1.0",
    "scikit-learn==1.6.1",
    "sentence-transformers==4.1.0",
    "streamlit==1.45.1",
    "torch==2.7.0",
    "transformers==4.52.4",
]
